--- a/julia/Paths/Project.toml
+++ b/julia/Paths/Project.toml
@@ -13,6 +13,7 @@ HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
 Pandas = "eadc2687-ae89-51f9-a5d9-86b5a6373a9c"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -29,4 +30,5 @@ TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 HDF5 = "0.17.2"
 IJulia = "1.25.0"
 JSON3 = "1.14.0"
+Logging = "1.11.0"
 Serialization = "1.11.0"
