--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Seaborn = "d2ef9438-c967-53ab-8060-373fdd9e13eb"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
@@ -38,3 +39,4 @@ Logging = "1.11.0"
 ParameterizedFunctions = "5.18.0"
 PyPlot = "2.11.6"
 Serialization = "1.11.0"
+StatsBase = "0.34.5"
